--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -164,6 +164,8 @@ services:
       - ENCRYPTION_KEY=${ENCRYPTION_KEY}
     networks:
       - smarthire-network
+    ports:
+      - 3012:3012
     depends_on:
       mongodb:
         condition: service_healthy
