--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,52 @@
-# Root .env for Docker Compose
+ENCRYPTION_KEY=
+# Secret key used to encrypt LLM API keys data.
+# Generate it with: openssl rand -base64 32
 
-# Database
-MONGODB_URL=your_mongodb_url
 
-# Auth
-BETTER_AUTH_SECRET=your_better_auth_secret
+BETTER_AUTH_SECRET=
+# Secret for session/JWT signing in the web app.
+# Generate with: openssl rand -base64 32
 
-# AI Keys
-OPENAI_API_KEY=your_openai_api_key
-GEMINI_API_KEY=your_gemini_api_key
+UPSTASH_SEARCH_REST_URL=
+# Upstash Search/Vector DB URL.
+# Get from Upstash console → Database → REST URL.
 
-# Google OAuth (Meet Scheduler)
-CLIENT_ID=your_google_client_id
-CLIENT_SECRET=your_google_client_secret
-GOOGLE_REDIRECT_URI=http://localhost:3012/callback
+UPSTASH_SEARCH_REST_TOKEN=
+# Upstash API token.
+# Get from Upstash console → REST Token.
 
-# Email
-SMTP_HOST=your_smtp_host
-SMTP_PORT=587
-SMTP_USER=your_smtp_user
-SMTP_PASS=your_smtp_pass
-ADMIN_EMAIL=your_admin_email
 
-# Upstash Search
-UPSTASH_SEARCH_REST_URL=your_upstash_search_url
-UPSTASH_SEARCH_REST_TOKEN=your_upstash_search_token
+ENDPOINT=
+# S3 storage endpoint (AWS S3, MinIO, Supabase Storage etc.)
+# AWS example: https://s3.amazonaws.com
 
-# Storage
-ENDPOINT=your_storage_endpoint
-REGION=your_storage_region
-SECRET_ACCESS_KEY=your_storage_secret_access_key
-ACCESS_KEY_ID=your_storage_access_key_id
+REGION=
+# Cloud region of your S3 bucket.
+# Example: eu-west-1
 
-# URLs
+ACCESS_KEY_ID=
+# S3 access key.
+# Create in AWS IAM → Users → Security Credentials.
+
+SECRET_ACCESS_KEY=
+# S3 secret key.
+# Generated with ACCESS_KEY_ID in AWS IAM.
+
+# you may need to create a azure Bot in "azure Portal" to get those credentials (pl use single talent app)
+CLIENT_ID=
+# OAuth client ID.
+# Get from Microsoft Azure App Registration or Google Cloud Console.
+
+CLIENT_SECRET=
+# OAuth client secret.
+# Generated in Azure app registration.
+
+TENANT_ID=
+# Microsoft Azure tenant ID.
+# Found in Azure Active Directory.
+
 NEXT_PUBLIC_WEBSITE_URL=http://localhost:3000
+# Public URL of the web app used in emails.
 
-# Security
-ENCRYPTION_KEY=your_32_character_encryption_key
+BETTER_AUTH_URL=http://localhost:3000
+# Base URL of the web app for authentication callbacks.
