--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -207,7 +207,7 @@ services:
       - PORT=3000
       - MONGODB_URL=mongodb://mongodb:27017/smart_hire?replicaSet=rs0&directConnection=true
       - BETTER_AUTH_SECRET=${BETTER_AUTH_SECRET}
-      - BETTER_AUTH_URL=http://localhost:3000
+      - BETTER_AUTH_URL=${BETTER_AUTH_URL}
       - CANDIDATE_SERVICE_URL=http://candidate-service:3002/api
       - MCP_SERVER_IP=http://mcp-server:3003/mcp
       - MEET_SCHEDULER_IP=http://meet-scheduler:3012
