--- a/smart_hire_webapp/package.json
+++ b/smart_hire_webapp/package.json
@@ -13,6 +13,8 @@
     "@ai-sdk/google": "^3.0.15",
     "@ai-sdk/openai": "^3.0.21",
     "@ai-sdk/openai-compatible": "^2.0.22",
+    "@aws-sdk/client-s3": "^3.980.0",
+    "@aws-sdk/lib-storage": "^3.980.0",
     "@base-ui/react": "^1.1.0",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.4",
@@ -20,6 +22,7 @@
     "@types/imapflow": "^1.0.189",
     "ai": "^6.0.57",
     "better-auth": "^1.4.17",
+    "bun": "^1.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
@@ -47,6 +50,7 @@
     "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "bun-types": "^1.3.8",
     "eslint": "^9",
     "eslint-config-next": "16.1.5",
     "tailwindcss": "^4",
