--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,8 +160,8 @@ services:
     environment:
       - PORT=3012
       - MONGODB_URL=mongodb://mongodb:27017/smart_hire?replicaSet=rs0&directConnection=true
-      - CLIENT_ID=${CLIENT_ID}
-      - CLIENT_SECRET=${CLIENT_SECRET}
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
       - GOOGLE_REDIRECT_URI="http://meet-scheduler:3012/callback"
       - ENCRYPTION_KEY=${ENCRYPTION_KEY}
     networks:
