--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,11 @@ NEXT_PUBLIC_WEBSITE_URL=http://localhost:3000
 
 BETTER_AUTH_URL=http://localhost:3000
 # Base URL of the web app for authentication callbacks.
+
+GOOGLE_CLIENT_ID=
+# Google OAuth Client ID
+# This is the public identifier of your Google OAuth application.
+
+GOOGLE_CLIENT_SECRET=
+# Google OAuth Client Secret
+# This is the private secret key linked to your Google OAuth application.
