Use meet-scheduler for meeting service URL
Add MEETING_SERVICE_URL to docker-compose and update meeting.service.ts to default to http://meet-scheduler:3012. This ensures the meeting client points to the container hostname on the Docker network instead of localhost for correct inter-service resolution.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -185,6 +185,7 @@ services:
       - JOB_SERVICE_URL=http://job-service:3001/api
       - MATCHING_SERVICE_URL=http://matching-service:3004/api
       - REPORT_SERVICE_URL=http://report-service:3005/api
+      - MEETING_SERVICE_URL=http://meet-scheduler:3012
       - ENCRYPTION_KEY=${ENCRYPTION_KEY}
     networks:
       - smarthire-network
