Add manual sync, service logs, and AES decrypt
Introduce manual sync endpoints and UI triggers for S3 and Email processing, add ServiceLog model to Prisma schemas, and support AES decryption for stored credentials.

Key changes:
- Add /s3/sync and /mail/sync endpoints; routes call processS3Account/processEmailAccount with an isManual flag.
- Add front-end actions and buttons to trigger S3 and Email syncs from settings, with Authorization via company.mcpToken.
- Persist service events via prisma.serviceLog.create (INFO/SUCCESS) when finding and processing files/attachments.
- Add AES decrypt helper (CryptoJS) and decrypt stored IMAP passwords and S3 secret keys before use; add crypto-js to package dependencies.
- Pass MCP token as Authorization header when calling candidate service for document-type and bulk endpoints.
- Increase candidate service maxRequestBodySize and make ports configurable from env for processing services.
- Adjust email cron frequency to hourly and add extra debug/error logging throughout cron handlers.
- Update tests to validate Authorization header usage and companyId field naming.

These changes enable manual synchronization, improved observability/auditing of processed files, secure handling of encrypted credentials, and propagate MCP auth to downstream candidate APIs.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -221,6 +221,8 @@ services:
       - REGION=${REGION}
       - SECRET_ACCESS_KEY=${SECRET_ACCESS_KEY}
       - ACCESS_KEY_ID=${ACCESS_KEY_ID}
+      - S3_SERVICE_URL=http://s3-processing-service:3007
+      - EMAIL_SERVICE_URL=http://email-processing-service:3006
     networks:
       - smarthire-network
     restart: unless-stopped
