--- a/email_processing_service/package.json
+++ b/email_processing_service/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@prisma/client": "6.19.0",
+    "@types/crypto-js": "^4.2.2",
     "cronbake": "^0.4.0",
+    "crypto-js": "^4.2.0",
     "elysia": "^1.4.22",
     "imapflow": "^1.2.6"
   },
