--- a/s3_processing_service/package.json
+++ b/s3_processing_service/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@prisma/client": "6.1.0",
+    "@types/crypto-js": "^4.2.2",
     "cronbake": "^0.4.0",
+    "crypto-js": "^4.2.0",
     "elysia": "latest",
     "prisma": "6.1.0"
   },
