Make S3 bucket names configurable via env
Add environment variables to configure S3 bucket names and use them with sensible defaults. Updated .env.example to include S3_CV_BUCKET_NAME, S3_CONTRACTS_BUCKET_NAME, and S3_MATCHING_REPORTS_BUCKET_NAME. Modified candidate_service/src/lib/storage.ts to read S3_CV_BUCKET_NAME for the client default bucket and BUCKET_NAME; updated report_service/src/lib/s3.ts to use S3_CONTRACTS_BUCKET_NAME; and changed report_service/src/handlers/report.handler.ts to upload matching reports to S3_MATCHING_REPORTS_BUCKET_NAME. Changes maintain backward compatibility by falling back to existing default bucket names.

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,14 @@ UPSTASH_SEARCH_REST_TOKEN=
 # Upstash API token.
 # Get from Upstash console → REST Token.
 
+S3_CV_BUCKET_NAME=
+# Name of the S3 bucket where CVs/resumes are stored.
+
+S3_CONTRACTS_BUCKET_NAME=
+# Name of the S3 bucket where contract documents are stored.
+
+S3_MATCHING_REPORTS_BUCKET_NAME=
+# Name of the S3 bucket where matching analysis reports are stored.
 
 ENDPOINT=
 # S3 storage endpoint (AWS S3, MinIO, Supabase Storage etc.)
