--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,7 @@ services:
       - SECRET_ACCESS_KEY=${SECRET_ACCESS_KEY}
       - ACCESS_KEY_ID=${ACCESS_KEY_ID}
       - ENCRYPTION_KEY=${ENCRYPTION_KEY}
+      - S3_MATCHING_REPORTS_BUCKET_NAME=${S3_MATCHING_REPORTS_BUCKET_NAME}
     networks:
       - smarthire-network
     depends_on:
@@ -114,6 +115,7 @@ services:
       - REGION=${REGION}
       - SECRET_ACCESS_KEY=${SECRET_ACCESS_KEY}
       - ACCESS_KEY_ID=${ACCESS_KEY_ID}
+      - S3_CV_BUCKET_NAME=${S3_CV_BUCKET_NAME}
     networks:
       - smarthire-network
     depends_on:
@@ -132,6 +134,8 @@ services:
       - REGION=${REGION}
       - SECRET_ACCESS_KEY=${SECRET_ACCESS_KEY}
       - ACCESS_KEY_ID=${ACCESS_KEY_ID}
+      - S3_MATCHING_REPORTS_BUCKET_NAME=${S3_MATCHING_REPORTS_BUCKET_NAME}
+      - S3_CONTRACTS_BUCKET_NAME=${S3_CONTRACTS_BUCKET_NAME}
     networks:
       - smarthire-network
     depends_on:
